# velm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile-commands.json  compile-commands_sln.json
.github/workflows/: ci_tests.yml
delayed/: window.cpp
include/velm/: hdf5.h  mesh.h  ndarray.h  scene.h  shader_system.h  velm.h  window.h
scripts/: build.sh  test.sh
shaders/: CMakeLists.txt  common.sh  fs_passthrough.sc  vs_basic.sc  vs_red.sc
src/: CMakeLists.txt  hdf5.cpp  scene.cpp  shader_system.cpp  shader_system.h  velm.cpp  window.cpp
tests/: CMakeLists.txt  test_hdf5.cpp  test_ndarray.cpp
tests/res/: test_file.h5
